--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
     "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
     "electron": "^28.0.0",
+    "fs-extra": "^11.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
-    "yup": "^1.3.3",
-    "zustand": "^4.4.7",
+    "react-redux": "^9.2.0",
     "sharp": "^0.33.1",
     "simple-git": "^3.22.0",
-    "fs-extra": "^11.2.0"
+    "yup": "^1.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "electron-builder": "^24.9.1",
     "concurrently": "^8.2.2",
+    "electron-builder": "^24.9.1",
+    "vite": "^5.0.8",
     "wait-on": "^7.2.0"
   },
   "build": {
