--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "vite build && electron-builder"
   },
@@ -22,14 +25,16 @@
     "react-redux": "^9.2.0",
     "sharp": "^0.33.1",
     "simple-git": "^3.22.0",
-    "yup": "^1.3.3",
+    "yup": "^1.7.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^4.0.4",
     "concurrently": "^8.2.2",
     "electron-builder": "^24.9.1",
     "vite": "^5.0.8",
+    "vitest": "^4.0.4",
     "wait-on": "^7.2.0"
   },
   "build": {
