--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
     "electron": "^28.0.0",
     "fs-extra": "^11.2.0",
