--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "sharp": "^0.33.1",
     "simple-git": "^3.28.0",
