--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
-    "electron": "^28.0.0",
+    "electron-updater": "^6.6.2",
     "fs-extra": "^11.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^4.0.4",
     "concurrently": "^8.2.2",
+    "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "vite": "^5.0.8",
     "vitest": "^4.0.4",
@@ -45,7 +46,12 @@
     "files": [
       "dist/**/*",
       "electron/**/*",
-      "package.json"
+      "package.json",
+      "!node_modules/**/*",
+      "node_modules/sharp/**/*"
+    ],
+    "asarUnpack": [
+      "node_modules/sharp/**/*"
     ],
     "directories": {
       "output": "release",
@@ -66,7 +72,19 @@
           ]
         }
       ],
-      "icon": "build/icon.ico"
+      "icon": "build/icon.ico",
+      "artifactName": "${productName} Setup ${version}.${ext}",
+      "publisherName": "Sakr Store"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Sakr Store Manager"
+    },
+    "portable": {
+      "artifactName": "${productName} ${version} Portable.${ext}"
     },
     "mac": {
       "target": "dmg",
@@ -80,6 +98,11 @@
       ],
       "category": "Office",
       "icon": "build/icon.png"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "your-github-username",
+      "repo": "sakr-store-manager"
     }
   }
 }
