--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "electron-updater": "^6.6.2",
     "fs-extra": "^11.2.0",
+    "lucide-react": "^0.548.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
