--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
