--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "concurrently": "^8.2.2",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "electron-packager": "^17.1.2",
     "vite": "^5.0.8",
     "vitest": "^4.0.4",
     "wait-on": "^7.2.0"
@@ -78,7 +79,11 @@
       ],
       "icon": "build/icon.ico",
       "artifactName": "${productName} Setup ${version}.${ext}",
-      "publisherName": "Sakr Store"
+      "publisherName": "Sakr Store",
+      "signingHashAlgorithms": [
+        "sha256"
+      ],
+      "sign": null
     },
     "nsis": {
       "oneClick": false,
