feat: Enhance error handling and update checking for portable builds in main process

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -21,6 +21,9 @@ win:
     - target: dir
       arch:
         - x64
+    - target: portable
+      arch:
+        - x64
   icon: build/icon.ico
 
 nsis:
