--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -10,8 +10,9 @@ files:
   - dist/**/*
   - electron/**/*
   - package.json
-  - "!node_modules/**/*"
+  - node_modules/fs-extra/**/*
   - node_modules/sharp/**/*
+  - "!node_modules/**/*"
 
 asarUnpack:
   - node_modules/sharp/**/*
