--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -10,10 +10,13 @@ files:
   - dist/**/*
   - electron/**/*
   - package.json
-  - "!node_modules/**/*"
-  - node_modules/sharp/**/*
-  - node_modules/fs-extra/**/*
-  - node_modules/simple-git/**/*
+  - node_modules/**/*
+  - "!node_modules/**/test/**"
+  - "!node_modules/**/*.md"
+  - "!node_modules/**/{CHANGELOG.md,README.md,README,readme.md,readme}"
+  - "!node_modules/**/{test,__tests__,tests,powered-test,example,examples}"
+  - "!node_modules/**/*.d.ts"
+  - "!node_modules/.bin"
 
 asarUnpack:
   - node_modules/sharp/**/*
