feat: Implement main process for Electron app with IPC handlers, auto-updater, and image processing capabilities

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sakr-store-manager",
   "version": "1.0.0",
   "description": "A desktop application for managing product catalogs with Git integration",
-  "main": "electron/main.js",
+  "main": "electron/main.cjs",
   "type": "module",
   "author": "Sakr Store",
   "license": "MIT",
