--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -14,6 +14,7 @@ files:
   - electron/**/*
   - package.json
   - node_modules/**/*
+  - "!node_modules/electron-updater/**/*"
   - "!node_modules/**/test/**"
   - "!node_modules/**/tests/**"
   - "!node_modules/**/__tests__/**"
