--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "electron-updater": "^6.6.2",
     "fs-extra": "^11.2.0",
     "lucide-react": "^0.548.0",
-    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.5.3",
@@ -33,8 +32,7 @@
     "react-use": "^17.6.0",
     "sharp": "^0.33.1",
     "simple-git": "^3.28.0",
-    "yup": "^1.7.1",
-    "zustand": "^4.4.7"
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
@@ -42,7 +40,6 @@
     "concurrently": "^8.2.2",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
-    "electron-packager": "^17.1.2",
     "vite": "^5.0.8",
     "vitest": "^4.0.4",
     "wait-on": "^7.2.0"
