--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -12,6 +12,7 @@ directories:
 files:
   - dist/**/*
   - electron/**/*
+  - src/**/*
   - package.json
   - node_modules/**/*
   - "!node_modules/electron-updater/**/*"
